bookstore-chart/templates/bookstore-books-api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bookstore-books-api
    app.kubernetes.io/component: bookstore-books-api
    app.kubernetes.io/instance: bookstore-books-api
  name: bookstore-books-api
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: bookstore-books-api
    weight: 100
  wildcardPolicy: None
